# ansible-role-wordpress

./: .ansible-lint.yml  README.md  ansible.cfg  pyproject.toml
.github/workflows/: lint-molecule.yml  main.yml  release.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  requirements.yml
tasks/: main.yml
templates/: apache-wp.conf.j2  wp-config.php.j2
tests/: test.yml
vars/: Debian.yml  RedHat.yml
